--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -28,12 +28,14 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^6.14.0",
+    "reflect-metadata": "^0.2.2",
     "zod": "^4.0.17"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   }
 }
