--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,7 +8,10 @@
         "sourceMap": true,
         "outDir": "dist",
         "esModuleInterop": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "useDefineForClassFields": false
     },
     "include": ["src/**/*", "prisma/**/*"]
 }
