--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
+    "@types/passport-jwt": "^4.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.4",
