--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,19 +12,22 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-native/virtualized-lists": "^0.80.2",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.24",
     "expo": "~53.0.20",
     "expo-cli": "^6.3.10",
+    "expo-secure-store": "^14.2.3",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "^2.27.2",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
-    "react-native-reanimated": "~3.17.4",
-    "@react-native-community/datetimepicker": "8.4.1"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
