--- a/server/package.json
+++ b/server/package.json
@@ -25,15 +25,19 @@
     "argon2": "^0.44.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "expo-secure-store": "^14.2.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^6.14.0",
+    "react-native-get-random-values": "^1.11.0",
     "reflect-metadata": "^0.2.2",
+    "uuid": "^11.1.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
     "@types/passport-jwt": "^4.0.1",
+    "@types/react": "^19.1.11",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.4",
