--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@nestjs/platform-express": "^11.1.6",
     "@prisma/client": "^6.14.0",
     "argon2": "^0.44.0",
+    "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "expo-secure-store": "^14.2.3",
