--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "codered-server",
   "version": "0.1.0",
   "scripts": {
-    "dev": "tsx watch src/main.ts",
+    "dev": "npx nest start --watch",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/main.js",
     "prisma:generate": "prisma generate",
@@ -35,6 +35,7 @@
     "zod": "^4.0.17"
   },
   "devDependencies": {
+    "@nestjs/cli": "^11.0.10",
     "@types/node": "^24.3.0",
     "@types/passport-jwt": "^4.0.1",
     "@types/react": "^19.1.11",
